# kids-yearly-video-compiler

./: .gitignore  README.md  pyproject.toml  yearly_video_generator.py
configs/: test-config.yaml
src/kids_yearly_video_compiler/: __init__.py  cli.py  configuration.py  preferences.yaml  video_collection.py  video_collection_compiler.py  video_inspector.py  yearly_video_generator.py
tests/: test_configuration.py  test_video_aggregation.py  test_video_info.py
