[tool.poetry]
name = "kids-yearly-video-compiler"
version = "0.0.1"
description = "A tool to compile all my kids weekly videos into a yearly video"
authors = ["Kyle Johnson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ffmpeg-python = "^0.2.0"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.poetry.scripts]
kyvc = "kids_yearly_video_compiler.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
